--- a/forum-frontend/.prettierrc.json
+++ b/forum-frontend/.prettierrc.json
@@ -1,5 +1,11 @@
 {
+  "bracketSpacing": true,
+  "arrowParents": "always",
+  "quoteProps": "as-needed",
+  "semi": true,
   "singleQuote": false,
   "trailingComma": "all",
-  "semi": true
+  "useTabs": false,
+  "tabWidth": 2,
+  "endOfLine": "lf"
 }
