--- a/forum-backend/package.json
+++ b/forum-backend/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^9.3.9",
     "@nestjs/core": "^9.3.9",
     "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
